Added notes on name database and constraints to demonstration ipynb

--- a/demonstration.ipynb
+++ b/demonstration.ipynb
@@ -33,6 +33,39 @@
    "source": [
     "## Interaction using Python API\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9774f6d1",
+   "metadata": {},
+   "source": [
+    "## Name Database (Demo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5826f79f",
+   "metadata": {},
+   "source": [
+    "You can create a database of name/age pairs by way of a grammar, stored in a .fan file as a set of rules dictating how the Fandango input should be generated. Note that <start> is the very first variable that the grammar should refer to.\n",
+    "\n",
+    "Then, this command will generate 10 name, age pairs based on the grammar specified in persons.fan (an example .fan file).\n",
+    "\n",
+    "fandango fuzz -f persons.fan -n 10\n",
+    "\n",
+    "'-o FILENAME' redirects the output of the above command into a file FILENAME.\n",
+    "'-s DELIMITER' replaces the delimiter between outputs with DELIMITER (default is a newline).\n",
+    "'-d DIRECTORYNAME' stores each output in a directory named DIRECTORYNAME.\n",
+    "\n",
+    "fandango fuzz -f persons.fan -n 10 -o persons.txt\n",
+    "fandango fuzz -f persons.fan -n 10 -o persons.txt -s ':'\n",
+    "fandango fuzz -f persons.fan -n 10 -d persons\n",
+    "\n",
+    "The number of outputs can be limited via the numerical argument -n or -N, where -n refers to the number of solutions/outputs, and -N refers to the number of generated sets.\n",
+    "\n",
+    "fandango fuzz -f persons.fan -n 10 # to limit the number of solutions\n",
+    "fandango fuzz -f persons.fan -N 10 # to limit the number of generations\n"
+   ]
   }
  ],
  "metadata": {
