--- a/demonstration.ipynb
+++ b/demonstration.ipynb
@@ -53,18 +53,51 @@
     "\n",
     "fandango fuzz -f persons.fan -n 10\n",
     "\n",
-    "'-o FILENAME' redirects the output of the above command into a file FILENAME.\n",
-    "'-s DELIMITER' replaces the delimiter between outputs with DELIMITER (default is a newline).\n",
-    "'-d DIRECTORYNAME' stores each output in a directory named DIRECTORYNAME.\n",
+    "1. '-o FILENAME' redirects the output of the above command into a file FILENAME.\n",
+    "2. '-s DELIMITER' replaces the delimiter between outputs with DELIMITER (default is a newline).\n",
+    "3. '-d DIRECTORYNAME' stores each output in a directory named DIRECTORYNAME.\n",
     "\n",
-    "fandango fuzz -f persons.fan -n 10 -o persons.txt\n",
-    "fandango fuzz -f persons.fan -n 10 -o persons.txt -s ':'\n",
-    "fandango fuzz -f persons.fan -n 10 -d persons\n",
+    "1. fandango fuzz -f persons.fan -n 10 -o persons.txt\n",
+    "2. fandango fuzz -f persons.fan -n 10 -o persons.txt -s ':'\n",
+    "3. fandango fuzz -f persons.fan -n 10 -d persons\n",
     "\n",
     "The number of outputs can be limited via the numerical argument -n or -N, where -n refers to the number of solutions/outputs, and -N refers to the number of generated sets.\n",
     "\n",
-    "fandango fuzz -f persons.fan -n 10 # to limit the number of solutions\n",
-    "fandango fuzz -f persons.fan -N 10 # to limit the number of generations\n"
+    "1. fandango fuzz -f persons.fan -n 10 # to limit the number of solutions\n",
+    "2. fandango fuzz -f persons.fan -N 10 # to limit the number of generations\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5762646",
+   "metadata": {},
+   "source": [
+    "## Specifying Constraints"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd9a6f38",
+   "metadata": {},
+   "source": [
+    "Constraints can be written as boolean expressions, where \"< VARNAME >\" is used to refer to variable VARNAME. Note that all constraints should be preceded by the \"where\" keyword in grammars. \n",
+    "where int(< age >) < 50 (age must be less than 50)\n",
+    "\n",
+    "In addition to grammars, constraints can also be specified on the command line with -c to denote a constraint.\n",
+    "\n",
+    "fandango fuzz -f persons.fan -n 10 -c '25 <= int(< age >) and int(< age >) <= 45'\n",
+    "\n",
+    "How Fandango Solves Constraints\n",
+    "1. It first uses the grammar to generate a population of inputs.\n",
+    "2. It then checks which individual inputs are closest in fulfilling the given constraints. For instance, for a constraint int(<X>) == 100, an input where <X> has a value of 90 is closer to fulfillment than one with value of, say 20. Selecting the best inputs is also known as “survival of the fittest”.\n",
+    "3. The best inputs are selected, the others are discarded.\n",
+    "4. Fandango then generates new offspring by mutating the remaining inputs, recomputing parts according to grammar rules. It can also exchange parts with those from other inputs; this is called crossover.\n",
+    "5. Fandango then repeats Steps 2-4 until all inputs satisfy the constraints.\n",
+    "\n",
+    "Soft constraints may also be used, which do not fix values but specify arbitrary minimums and/or maximums instead.\n",
+    "1. Ex. fandango fuzz -f persons.fan --maximize 'int(<age>)' (Maximizes age field)\n",
+    "2. Ex. fandango fuzz -f persons.fan --minimize 'int(<age>)' (Minimizes age field)\n",
+    "\n"
    ]
   }
  ],
