--- a/quiz.ipynb
+++ b/quiz.ipynb
@@ -10,8 +10,23 @@
     "1. Fandango will crash upon detecting infinite recursion. \n",
     "2. Fandango does not support recursion. \n",
     "3. A non-recursive alternative is needed for the Fandango dancer to show up for fuzzing purposes.\n",
-    "4. Fandango does not detect infinite recursions; it keeps running until manually stopped"
+    "4. Fandango does not detect infinite recursions; it keeps running until manually stopped\n",
+    "\n",
+    "Why do we use grammars to describe network protocols in Fandango instead of sending random bytes directly?\n",
+    "1. Because grammars preserve the protocol’s structure and valid message order, allowing fuzzing to explore meaningful variations without breaking basic syntax."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
