Added regexp description to demonstration ipynb

--- a/demonstration.ipynb
+++ b/demonstration.ipynb
@@ -99,6 +99,52 @@
     "2. Ex. fandango fuzz -f persons.fan --minimize 'int(<age>)' (Minimizes age field)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "133bd3d9",
+   "metadata": {},
+   "source": [
+    "## Regular Expressions/Complex Inputs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bbbcf2b",
+   "metadata": {},
+   "source": [
+    "Fandango allows users to instantiate strings from regexp templates, and use regexp to parse and match inputs.\n",
+    "\n",
+    "By default, there is an imposed repetition limit of 20.\n",
+    "\n",
+    "Example of RegExp grammar:\n",
+    "1. <start> ::= r\"(abc)+\"\n",
+    "\n",
+    "fandango fuzz -f infinity.fan -n 10\n",
+    "\n",
+    "Specify {m, n} to limit the number of repetitions to m to n\n",
+    "1. <start> ::= r\"(abc){1,5}\"\n",
+    "\n",
+    "fandango fuzz -f finity.fan -n 5\n",
+    "\n",
+    "Complex inputs can also be produced in Fandango, like recursive ones:\n",
+    "Ex. fandango fuzz -f additions.fan -n 10\n",
+    "\n",
+    "Need to specify non-recursive terms to prevent infinite recursion\n",
+    "\n",
+    "Recursive rules can substitute for \"+\"\n",
+    "1. Ex. <number> ::= <digit>+\n",
+    "2. <number> ::= <digit> <number> | <digit>\n",
+    "\n",
+    "Other complex inputs include arithmetic\n",
+    "1. fandango fuzz -f expr.fan -n 10\n",
+    "2. fandango fuzz -f expr-float.fan -n 10\n",
+    "3. fandango fuzz -f expr-float.fan -n 10 -c 'eval(str(<start>)) > 1000'\n",
+    "\n",
+    "Divide by zero errors may occur\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
