--- a/quiz.ipynb
+++ b/quiz.ipynb
@@ -49,7 +49,10 @@
    "metadata": {},
    "source": [
     "#### **Why do we use grammars to describe network protocols in Fandango instead of sending random bytes directly?**\n",
-    "1. Because grammars preserve the protocol’s structure and valid message order, allowing fuzzing to explore meaningful variations without breaking basic syntax."
+    "1. Because grammars preserve the protocol’s structure and valid message order, allowing fuzzing to explore meaningful variations without breaking basic syntax.\n",
+    "2. Because grammars make the fuzzing process slower but more secure.\n",
+    "3. Because grammars completely prevent all network errors and crashes.\n",
+    "4. Because grammars allow us to bypass protocol authentication steps automatically."
    ]
   },
   {
@@ -57,7 +60,7 @@
    "id": "13887eb9",
    "metadata": {},
    "source": [
-    "Answer: ??"
+    "Answer: (1)"
    ]
   }
  ],
